[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version="0.12.5",features = ["json"], optional = true }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
thiserror = "1.0.61"
ureq = { version = "2.9.7", features=["json"]}
url = "2.5.2"

[features]
async = [
    "reqwest"
]